<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:background="#c5c4c4">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Firewall Login IITM"
                    android:id="@+id/about_the_app"
                    android:layout_gravity="left"
                    android:textColor="#777"
                    android:textStyle="italic"
                    android:textSize="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/subject">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:text="@string/about_main_messsage"
                        android:id="@+id/about_main_messsage"
                        android:padding="16dp"
                        android:layout_gravity="center"
                        android:singleLine="false"
                        android:fontFamily="sans-serif-light"
                        android:textSize="16dp"
                        android:textColor="#222"
                        />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#d3d7d9"
                        />

                    <LinearLayout
                        android:id="@+id/about_submit_feedback_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:background="@drawable/rate_on_play_store_bg"
                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="fill_parent"
                            android:src="@drawable/ic_bug_report_black_24dp"
                            android:layout_marginLeft="19dp"
                            android:tint="@color/accent_material_dark" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/send_feedback_bug_report"
                            android:textSize="14dp"
                            android:textColor="#555"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:paddingLeft="7dp"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#d3d7d9"
                        />

                    <LinearLayout
                        android:id="@+id/rate_on_play_store_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:background="@drawable/rate_on_play_store_bg"
                        >

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="fill_parent"
                            android:src="@drawable/play_store_icon"
                            android:layout_marginLeft="24dp"
                            android:tint="@color/accent_material_dark" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/rate_on_play_store"
                            android:textSize="14dp"
                            android:paddingTop="12dp"
                            android:textColor="#555"
                            android:paddingBottom="12dp"
                            android:paddingLeft="12dp"
                            />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_dev"
                    android:id="@+id/about_the_dev"
                    android:layout_gravity="left"
                    android:textColor="#777"
                    android:textStyle="italic"
                    android:textSize="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/subject"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/devloper">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:id="@+id/developer">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/saket"
                            android:id="@+id/about_saket_narayan"
                            android:textColor="#333"
                            android:fontFamily="sans-serif-light"
                            android:textSize="24dp"
                            android:textStyle="bold"
                            android:paddingLeft="16dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/touch_know"
                            android:id="@+id/about_touch_to_know_more"
                            android:layout_gravity="left|center_vertical"
                            android:paddingLeft="16dp"
                            android:textColor="#aaa"
                            android:fontFamily="sans-serif-light"
                            android:textSize="16dp"
                            android:textStyle="italic"
                            />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView2"
                            android:layout_gravity="left|center_vertical"
                            android:src="@drawable/about_arrow"
                            android:visibility="gone" />

                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Designer"
                    android:layout_gravity="left"
                    android:textColor="#777"
                    android:textStyle="italic"
                    android:textSize="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/subject"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/designer">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:id="@+id/designer1">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="Arunjith"
                            android:textColor="#333"
                            android:fontFamily="sans-serif-light"
                            android:textSize="24dp"
                            android:textStyle="bold"
                            android:paddingLeft="16dp"
                            android:layout_marginBottom="5dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:src="@drawable/about_arrow"
                            android:visibility="gone" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_thanks"
                    android:id="@+id/about_helping_hands"
                    android:layout_gravity="left"
                    android:textColor="#777"
                    android:textStyle="italic"
                    android:textSize="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/subject"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_special_thanks_message"
                        android:id="@+id/about_main_special_thanks"
                        android:padding="16dp"
                        android:lineSpacingExtra="4dp"
                        android:layout_gravity="center"
                        android:singleLine="false"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15dp"
                        android:textColor="#555"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>